--- a/movieSecret/public/stylesheets/style.css
+++ b/movieSecret/public/stylesheets/style.css
@@ -1,8 +1,34 @@
+@import url(http://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister);
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	background-image: url('/images/background.png');
+	background-position: fixed;
+	background-repeat: no-repeat;
+	background-size:cover;
+	font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color:#ffffff;
+  text-align: center;
 }
 
 a {
-  color: #00B7FF;
+  color: #ff5555;
+}
+.font {
+	font-family: "Love Ya Like A Sister", Helvetica, Arial, sans-serif;
+}
+.header {
+  font: 7em "Love Ya Like A Sister", Helvetica, Arial, sans-serif;
+  padding:0;
+  margin:0;
+}
+img {
+	margin: 15px 0 10px 0;
+}
+form {
+	margin: 10px;
+	text-align: left;
+}
+label {
+	color: #aaa;
+	font-size: .9em;
 }
