--- a/movieSecret/views/profile.ejs
+++ b/movieSecret/views/profile.ejs
@@ -13,8 +13,9 @@
 
     <form method="POST" action="/profile">
       <div>
-        <label>I have never seen</label><input type="text" class="input" name="neverSeen" id="neverSeen">
+        <label>I have never seen</label><input type="text" class="input" name="confession" id="neverSeen">
       </div>
+      <input type="submit" class="button font" value="confess" name="submit">
     </form>
     <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
