commented out edit (nothing to edit yet) and fixed save bug

--- a/movieSecret/views/profile.ejs
+++ b/movieSecret/views/profile.ejs
@@ -15,7 +15,7 @@
       <div>
         <label>I have never seen</label><input type="text" class="input" name="confession" id="neverSeen">
       </div>
-      <input type="submit" class="button font" value="confess" name="submit">
+      <input type="submit" class="button font" value="confess">
     </form>
     <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
