--- a/movieSecret/public/stylesheets/style.css
+++ b/movieSecret/public/stylesheets/style.css
@@ -9,7 +9,21 @@ body {
   color:#ffffff;
   text-align: center;
 }
-
+/* ul {
+  margin: 0 auto;
+  max-width: 62.5em;
+  width: 100%;
+  }
+li {
+	background-color: red;
+	color: #fff;
+	list-style: none;
+	font-size: 1.5em;
+	text-align:left;
+	margin: 0;
+	padding: 0;
+}
+ */
 a {
   color: #ff5555;
 }
