--- a/movieSecret/views/Register.ejs
+++ b/movieSecret/views/Register.ejs
@@ -8,7 +8,37 @@
   </head>
   <body>
 
-    <h1 class="header"><%= title %></h1>
+
+  <nav class="top-bar" data-topbar role="navigation" style="background-color: rgba(0, 0, 0, .4)">
+   
+
+  <section class="top-bar-section">
+    <!-- Right Nav Section -->
+    <ul class="right" style="background-color: rgba(0, 0, 0, .1)">
+       
+      <li class="name" style="background-color: rgba(0, 0, 0, .1)">
+        <a href="/user/register" style="background-color: rgba(0, 0, 0, .1)">Register</a>
+       
+           
+      </li>
+      <li class="name" style="background-color: rgba(0, 0, 0, .1)">
+      <a href="/user/login" style="background-color: rgba(0, 0, 0, .1)">Log In</a>
+       
+           
+      </li>
+      <li class="name" style="background-color: rgba(0, 0, 0, .1)">
+      <a href="/profile" style="background-color: rgba(0, 0, 0, .1)">Profile</a>
+       
+           
+      </li>
+    </ul>
+
+    <!-- Left Nav Section -->
+     
+  </section>
+</nav>
+
+    <h1 class="header"><a href="/"> <%= title %></a></h1>
     <h3 class="font"><%= subtitle %></h3>
 		<div class="row">
 		<div class="large-6 columns">
@@ -21,7 +51,7 @@
 				<div class="row">
 		    	<div class="large-9 columns">
 		      	<label>Username
-		        	<input type="text" name="username" />
+		        	<input type="text" name="username" required/>
 		      	</label>
 		    	</div>
 		 		</div>
@@ -35,14 +65,14 @@
 				<div class="row">
 		    	<div class="large-9 columns">
 		      	<label>Password
-		        	<input type="password" name="password" />
+		        	<input type="password" name="password" required/>
 		      	</label>
 		    	</div>
 		 		</div>
 				<div class="row">
 		    	<div class="large-9 columns">
 		      	<label>Confirm Password
-		        	<input type="password" name="confirmPassword" />
+		        	<input type="password" name="confirmPassword" required/>
 		      	</label>
 		    	</div>
 		 		</div>
