still making major damage to the working site

--- a/movieSecret/views/index.ejs
+++ b/movieSecret/views/index.ejs
@@ -37,7 +37,7 @@
     </div>
 
     
-    <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="/javascripts/vendor/jquery.js"></script>
     <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script src="/javascripts/foundation.min.js"></script>
     <script>
