--- a/movieSecret/views/login.ejs
+++ b/movieSecret/views/login.ejs
@@ -37,8 +37,7 @@
     </div>
 		</form>
 
-    <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <script src="/javascripts/vendor/jquery.js"></script>
     <script src="/javascripts/foundation.min.js"></script>
     <script>
        $(document).foundation();
