--- a/movieSecret/views/edit.ejs
+++ b/movieSecret/views/edit.ejs
@@ -52,7 +52,8 @@
           <h3 class="right">I have never seen</h3>
         </div>
         <div class="large-4 columns">
-          <input type="text" class="input" name="confession" id="confession">
+          <input type="hidden" name="db_id" id="db_id" value="<%= thisItem._id %>">
+          <input type="text" class="input" name="confession" id="confession" value="<%= thisItem.confession %>">
         </div>
         <div class="large-4 columns ui-front">
           <button class="button font confess" value="confess">confess</button>
