--- a/movieSecret/views/edit.ejs
+++ b/movieSecret/views/edit.ejs
@@ -21,6 +21,7 @@
           <h3 class="right">I have never seen</h3>
         </div>
         <div class="large-4 columns">
+          <input type="hidden" value="<%=thisItem._id%>" name="edit" id="edit">
           <input type="text" class="input" name="confession" id="confession" value="<%=thisItem.confession %>">
         </div>
         <div class="large-4 columns ui-front">
