--- a/movieSecret/views/index.ejs
+++ b/movieSecret/views/index.ejs
@@ -20,15 +20,22 @@
         <div class="large-8 columns right">
                 <h3>I have never seen <%= newSecret.confession %><% if (newSecret.year !== '') { %> (<%= newSecret.year %>)<% }%> </h3>
                 <p class="awards"><%= newSecret.awards %></p>
-                <label>If you haven't seen this, you can't claim you love film!
-                  <input type="submit" class="button font xButton" id="<%= newSecret._id %>" value="X - This is terrible!" name="submit">
-                </label>
+                <div class="row">
+                  <div class="large-6 columns">
+                    <label>If you haven't seen this, you can't claim you love film!
+                    <input type="submit" class="button font xButton" id="<%= newSecret._id %>" value="X - This is terrible!" name="submit">
+                    </label>
+                    <p>x-count: <%= newSecret.xCount %></p>
+
+                  </div>
+                </div>
                 <label>Hey, this is no big deal! This movie is overrated anyway!
                   <input type="submit" class="button font oCount" id="<%= newSecret._id %>" value="O - Overrated" name="submit">
                 </label>
+                <p>o-count: <%= newSecret.oCount %></p>
           </div>
           <div class="large-4 columns">
-              <% if (newSecret.poster !== '') { %>
+              <% if (newSecret.poster !== 'N/A' && newSecret.poster !== "") { %>
               <img src="<%= newSecret.poster %>" alt="<%= newSecret.confession %>">
               <% } %>
           </div>
